--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,69 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html {
+  font-size: 14px;
+  position: relative;
+  min-height: 100%;
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+body {
+  margin-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 3.5;
+}
+
+.pagination-container {
+  display: inline-flex;
+  position: fixed;
+  bottom: 75px;
+  padding: 10px;
+  text-align: center;
+}
+
+.footer-text {
+  text-align: center;
+}
+
+tr {
+  height: 50px;
+}
+
+.pagination-container-absolute {
+  position: absolute;
+  bottom: 60px;
+  background-color: #ffffff;
+  padding: 10px 0;
+  z-index: 1000;
+}
+
+body {
+  padding-bottom: 60px;
+}
+
+@media (min-width: 769px) {
+  .form-column-align {
+    margin-top: 5rem;
+  }
+}
+
+.clickable-row {
+  cursor: pointer;
+}
+
+.pagination-container {
+  position: static !important;
+}
