--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,3 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 html {
   font-size: 14px;
   position: relative;
@@ -20,7 +6,7 @@ html {
 
 @media (min-width: 768px) {
   html {
-    font-size: 16px;
+      font-size: 16px;
   }
 }
 
@@ -65,10 +51,15 @@ body {
 
 @media (min-width: 769px) {
   .form-column-align {
-    margin-top: 5rem;
+      margin-top: 5rem;
   }
 }
 
 .clickable-row {
   cursor: pointer;
+}
+
+thead th {
+  font-size: 0.875rem;
+  text-transform: uppercase;
 }
