--- a/src/index.css
+++ b/src/index.css
@@ -23,10 +23,7 @@ body {
 }
 
 .pagination-container {
-  display: inline-flex;
-  position: fixed;
-  bottom: 75px;
-  padding: 10px;
+  padding: 10px 0;
   text-align: center;
 }
 
@@ -36,13 +33,6 @@ body {
 
 tr {
   height: 50px;
-}
-
-.pagination-container-absolute {
-  position: absolute;
-  bottom: 60px;
-  padding: 10px 0;
-  z-index: 1000;
 }
 
 body {
@@ -59,7 +49,10 @@ body {
   cursor: pointer;
 }
 
-thead th {
-  font-size: 0.875rem;
-  text-transform: uppercase;
+.table {
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1), 0 2px 4px 0 rgba(0, 0, 0, 0.3) !important;
+}
+
+.container-spacing-top {
+  margin-top: 2.5rem;
 }
