add table actions

--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,30 @@ body {
 .custom-icon:focus {
   color: #3459e6;
 }
+
+.btn-icon-open i {
+    color: #287bb5 !important;
+    transition: color 0.3s ease;
+}
+
+.btn-icon-open:hover i {
+    color: #1b4e6b !important;
+}
+
+.btn-icon-edit i {
+    color: #2fb380 !important;
+    transition: color 0.3s ease;
+}
+
+.btn-icon-edit:hover i {
+    color: #20785a !important;
+}
+
+.btn-icon-delete i {
+    color: #da292e !important;
+    transition: color 0.3s ease;
+}
+
+.btn-icon-delete:hover i {
+    color: #a21e22 !important;
+}
